# label-shift-calibration

./: .gitignore  README.md  pyproject.toml
scripts/: ece_label_shift_estimation.py  plot_reliablity_diagram.py  post_hoc_calibration.py
src/lascal/: __init__.py
src/lascal/calibration_error/: __init__.py  ece.py  ece_label_shift.py
src/lascal/importance_weights/: __init__.py  elsa.py  get_weights.py  importance_weights.py
src/lascal/post_hoc_calibration/: calibrator.py  methods.py  prob_match_utils.py
src/lascal/utils/: __init__.py  common.py  constants.py  overwatch.py  softmax_clipper.py  subsampler.py  variance.py
